src/backend/packages/errors/test/helpers/index.ts
/**
 * Error testing helpers for the @austa/errors package
 * 
 * This barrel file exports all helper functions, classes, and matchers
 * for testing error handling functionality.
 */

// Error factories
export * from './error-factory';

// Assertion helpers
export * from './assertion-helpers';

// Re-export any other helpers as they are added
// export * from './mock-error-handler';
// export * from './network-error-simulator';
// export * from './test-matchers';